--- a/src/main/resources/experience.yml
+++ b/src/main/resources/experience.yml
@@ -15,7 +15,7 @@ Experience_Formula:
     # EXPONENTIAL: multiplier * level ^ exponent + base
     Curve: LINEAR
 
-    # If invalid values are entered mcMMO will use the default values instead and print an error in the console
+    # If invalid values are entered mcMMO will not start and print an error in the console
     Linear_Values:
         base: 1020
         multiplier: 20
@@ -33,11 +33,11 @@ Experience_Formula:
         Global: 1.0
         PVP: 1.0
 
-    # Experience gained from mobs not naturally spawned will get multiplied by this value.  0 by default.
+    # Experience gained from mobs not naturally spawned will get multiplied by this value. 0 by default.
     Mobspawners:
         Multiplier: 0
 
-    # Experience gained will get divided by these values. 1.0 by default, 2.0 means two times lower
+    # Experience gained will get divided by these values. 1.0 by default, 2.0 means two times less XP gained.
     Modifier:
         Swords: 1.0
         Taming: 1.0
