--- a/src/main/resources/advanced.yml
+++ b/src/main/resources/advanced.yml
@@ -1,5 +1,6 @@
 #
 #  Advanced configuration
+#  Last updated on ${project.version}-b${BUILD_NUMBER}
 #
 #  For advanced users only! There is no need to change anything here.
 #
