--- a/src/main/resources/treasures.yml
+++ b/src/main/resources/treasures.yml
@@ -592,7 +592,7 @@ Shake:
             Drop_Chance: 49.0
             Drop_Level: 0
     CREEPER:
-        SKULL:
+        SKULL_ITEM:
             Data: 4
             Amount: 1
             XP: 0
@@ -703,7 +703,8 @@ Shake:
             Drop_Chance: 100.0
             Drop_Level: 0
     SKELETON:
-        SKULL:
+        SKULL_ITEM:
+            Data: 0
             Amount: 1
             XP: 0
             Drop_Chance: 2.0
@@ -804,8 +805,8 @@ Shake:
             Drop_Chance: 15.0
             Drop_Level: 0
     ZOMBIE:
-        SKULL:
-            D\ata: 2
+        SKULL_ITEM:
+            Data: 2
             Amount: 1
             XP: 0
             Drop_Chance: 2.0
